--- a/style.css
+++ b/style.css
@@ -40,16 +40,74 @@ nav ul li{
     position: sticky;
     height: 100px;
     bottom: 0;
+    color: white;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.icons{
+    margin-top: 14px;
+}
+
+.icons i{
+    cursor: pointer;
 }
 
 .container{
-    min-height: 80vh;
+    min-height: 73vh;
+    background-color: black;
+    color: white;
+    font-family: 'Varela Round', sans-serif;
+    display: flex;
+    margin:23px auto;
+    width: 70%;
+    border-radius: 12px;
+    padding: 34px;
+    background-image: url('bg.jpg');
+    background-size: 100%;
 }
 
+.songItem{
+    height: 50px;
+    display: flex;
+    background-color: white;
+    color: black;
+    margin: 12px 0;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 23px;
+}
+
+.songListContainer{
+    margin-top: 75px;
+}
+
+.timestamp{
+    margin: 0 23px;
+}
+.timestamp i{
+    cursor: pointer;
+}
 #myProgressBar{
     width: 80vw;
+    cursor: pointer;
+}
+.songItem img{
+    width:43px;
+    margin: 0 23px;
+    border-radius: 34px;
+}
+
+.songInfo{
+    position: absolute;
+    left:10vw;
+    font-family: 'Varela Round', sans-serif;
+}
+
+.songInfo img{
+    opacity: 0;
+    transition: opacity 1s ease-in;
 }
